# cathsim-controller

./: .gitignore  README.md  pyproject.toml  write_video.py
arduino/: actuator_2.ino
arduino/actuator/: actuator.ino  actuator_copy.ino
arduino/actuator_2/: actuator_2.ino
arduino/actuator_original/: actuator_original.ino
arduino/actuator_tmp/: actuator_tmp.ino
arduino/actuator_v2/actuator/: actuator.ino
scratch/: make_video_not_working.py  make_video_tmp.py  realsense.py  record_trajectory.py
scripts/: BC.py  collect_action_img.py  experience_collect.py  experience_read.py  experience_write.sh  exprience_write.sh  interactive.py  interactive_2.py  make_video.py  permission.sh  port_release.sh  record_trajectories.py  resize_img.py  utils.py
src/: __init__.py
src/cathsim_controller/: camera.py  controller.backup.py  controller.py  controller_2.py  controller_tmp.py  dummy_env.py  joystick.py  real_env.py  utils.py
src/cathsim_controller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/console/: console.py  consoleAndController.py  doc_initial_thought_about_console.md  output_console.py
src/controller/: __init__.py  console.py  control.py  control_use_example.py  controller.py  motor.py  real_env.py
src/controller/wrapper/: __init__.py  camera.py  controller.py
src/tests/: control.py  control_use_example.py  controller_test.py  motor.py  motor_test.py  real_env.py
src/video/: supported_config.md  write_video.py
tests/: motor_test.py  test_config_camera.py  test_console.py
